gitops/apps/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demo-nginx
  namespace: demo

spec:

  replicas: 1

  selector:
    matchLabels:
      app: demo-nginx

  template:

    metadata:
      labels:
        app: demo-nginx

    spec:

      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault


      containers:

      - name: nginx

        image: nginx:1.27.0

        ports:
        - containerPort: 80


        securityContext:

          allowPrivilegeEscalation: false

          capabilities:
            drop:
            - ALL

          readOnlyRootFilesystem: true


        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "250m"
            memory: "256Mi"


        readinessProbe:

          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 5
          periodSeconds: 10


        livenessProbe:

          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 15
          periodSeconds: 20
