gitops/apps/nginx/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: demo-nginx

spec:
  selector:
    app: demo-nginx

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
