gitops/apps/nginx/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: nginx-network-policy
  namespace: demo

spec:

  podSelector:
    matchLabels:
      app: demo-nginx


  policyTypes:
  - Ingress
  - Egress


  ingress:

  - from:
    - namespaceSelector: {}



  egress:

  - to:
    - namespaceSelector: {}
